--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "ioredis": "^5.2.4",
+    "javascript-time-ago": "^2.5.9",
     "next": "latest",
     "next-auth": "^4.17.0",
     "pusher": "^5.1.1-beta",
     "pusher-js": "^7.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-time-ago": "^7.2.1",
     "swr": "^1.3.0",
     "uuid": "^9.0.0"
   },
@@ -20,6 +22,7 @@
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-timeago": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
